Fix HLS fullscreen gutter color

On Android, we currently always tell Blink that we will be using
fullscreen overlays. However, the MediaPlayerRenderer does not support
them, and does not attempt to use them.
The result is that Blink avoids drawing any gutter, which causes the
default background color from the LayerTree to be show instead. When no
overlay has been created, the default color is white.

This CL updates WMPI::SupportsOverlayFullscreenVideo to only return true
when we are not using the MediaPlayerRenderer.

BUG=711888
TEST= manually tested on an HLS and non HLS video.

Review-Url: https://codereview.chromium.org/2840973002
Cr-Commit-Position: refs/heads/master@{#467821}

Former-commit-id: 1423a66d68562cda92de55d3f247ae1c8a155241